# PL2020

./: .gitignore  ModelLog.txt  ProductConfiguration.config  README.md  Statistic.txt  checker.py  doc docker.odt  dockerfile cop-ros  launch.sh  reset_du_repo.txt
CoppeliaSim/models/montrac/: shuttleA.ttm  shuttleB.ttm  shuttleC.ttm  shuttleD.ttm  shuttleE.ttm  shuttleF.ttm  shuttleZ.ttm
CoppeliaSim/models/nature/: simModelThumbnails.ttmt
CoppeliaSim/models/robots/non-mobile/: simModelThumbnails.ttmt
Doc/checker_model/: ModelLog.txt  checker.py
V-Rep/models/: v_repModelThumbnails.ttmt
V-Rep/models/montrac/: shuttleA.ttm  shuttleB.ttm  shuttleC.ttm  shuttleD.ttm  shuttleE.ttm  shuttleF.ttm  shuttleZ.ttm  v_repModelThumbnails.ttmt
V-Rep/models/robots/non-mobile/: v_repModelThumbnails.ttmt
ros_ws/devel/include/commande/: ExchangeSh.h
ros_ws/devel/lib/commande/: run
ros_ws/devel/lib/commande_locale/: simulation
ros_ws/devel/lib/postes/: run_Poste1  run_Poste2  run_Poste3  run_Poste4
ros_ws/devel/lib/python2.7/dist-packages/commande/msg/: _ExchangeSh.py
ros_ws/devel/lib/robots/: robot1  robot2  robot3  robot4
ros_ws/devel/lib/scheduling/: ordonnancement
ros_ws/devel/lib/taches/: tache1  tache2  tache3  tache4  tache5  tache6  tache7  tache8
ros_ws/devel/share/commande/cmake/: commande-msg-extras.cmake
ros_ws/devel/share/common-lisp/ros/commande/msg/: ExchangeSh.lisp  _package.lisp  _package_ExchangeSh.lisp  commande-msg.asd
ros_ws/src/aiguillages/: CMakeLists.txt  package.xml
ros_ws/src/aiguillages/msg/: Msg_Aiguillage.msg
ros_ws/src/aiguillages/src/: A1.cpp  A1.h  A10.cpp  A10.h  A11.cpp  A11.h  A12.cpp  A12.h  A2.cpp  A2.h  A3.cpp  A3.h  Aiguillage.cpp  Aiguillage.h  Sh.h  aiguillage_1.cpp  aiguillage_10.cpp  aiguillage_11.cpp  aiguillage_12.cpp  aiguillage_2.cpp  aiguillage_3.cpp  main_aiguillage.cpp
ros_ws/src/automates/: CMakeLists.txt
ros_ws/src/automates/src/: automates.cpp
ros_ws/src/commande/: CMakeLists.txt  package.xml
ros_ws/src/commande/msg/: ExchangeSh.msg
ros_ws/src/commande/src/: .RobotsInterface.h.swp  .main_commande.cpp.swp  AigsInterface.cpp  AigsInterface.h  Capteur_Poste.cpp  Capteur_Poste.h  RobotsInterface.cpp  RobotsInterface.h  actionneurs.cpp  actionneurs.h  capteurs.cpp  capteurs.h  commande.cpp  commande.h  communication_baxter.cpp  main_commande.cpp  productPost.cpp  productPost.h  robots.cpp  robots.h
ros_ws/src/commande/src/aiguillages/: A1.cpp  A1.h  A10.cpp  A10.h  A11.cpp  A11.h  A12.cpp  A12.h  A2.cpp  A2.h  A3.cpp  A3.h
ros_ws/src/commande_locale/: CMakeLists.txt  package.xml
ros_ws/src/commande_locale/src/: LogManager.cpp  UI.cpp  UI.h  commande_locale.cpp  configuration.cpp  configuration.h  display.cpp  inOutController.cpp  inOutController.h  vrepController.cpp  vrepController.h
ros_ws/src/communication/: CMakeLists.txt
ros_ws/src/launcher/launch/: launch_alpha.launch  launch_beta.launch
ros_ws/src/postes/: CMakeLists.txt  package.xml
ros_ws/src/postes/src/: Poste1.cpp  Poste1.h  Poste2.cpp  Poste2.h  Poste3.cpp  Poste3.h  Poste4.cpp  Poste4.h  main_poste1.cpp
ros_ws/src/robots/: CMakeLists.txt  package.xml
ros_ws/src/robots/msg/: ColorMsg.msg  DoTaskMsg.msg
ros_ws/src/robots/src/: Poste.cpp  Poste.h  Robot.cpp  Robot.h  main_robot1.cpp  main_robot2.cpp  main_robot3.cpp  main_robot4.cpp  robot1.cpp  robot2.cpp
ros_ws/src/scheduling/: CMakeLists.txt  package.xml
ros_ws/src/scheduling/src/: mainScheduling.cpp  product.cpp  product.h  scheduler.cpp  scheduler.h
ros_ws/src/shuttles/: CMakeLists.txt  package.xml
ros_ws/src/shuttles/src/: FileAttente.cpp  FileAttente.h  capteurs.cpp  capteurs.h  main_ShuttleManager.cpp  shuttleManager.h
ros_ws/src/taches/: CMakeLists.txt
ros_ws/src/taches/src/: main_tache1.cpp  main_tache2.cpp  main_tache3.cpp  main_tache4.cpp  main_tache5.cpp  main_tache6.cpp  main_tache7.cpp  main_tache8.cpp  tache.cpp  tache.h  tache1.cpp  tache1.h  tache2.cpp  tache2.h  tache3.cpp  tache3.h  tache4.cpp  tache4.h  tache5.cpp  tache6.cpp  tache7.cpp  tache8.cpp
ros_ws/src/vrep_common/: CMakeLists.txt  package.xml
sim/: Simulation.ttt  SimulationKinetic.ttt  correctionFluide.ttt
